# snoopy

./: .cproject  .gitignore  .project  CMakeCache.txt-o  CMakeLists.txt  Info.plist  Makefile.am  Makefile.in  README.md  SP_DS_FuzzyPN.cpp  Snoopy.rc  Snoopy.xml  SnoopyVC.sln  SnoopyVC.vcproj  SnoopyVC.vcxproj  config.h.in  configure  configure.in  createSnoopyPackage  makefile.unx  mk.sh  mkAppBundleOSX.sh  mk_distr.sh  mk_src_lst.sh  snoopy.cpp  snoopy.dmg  snoopy.h  snoopy.icns  snoopy.m4  snoopy.project  snoopy2.spec  sp_build.cpp.in  sp_build.h  sp_defines.cpp  sp_defines.h  sp_revision.cpp  sp_revision.h  sp_utilities.cpp  sp_utilities.h  src.lst  (+1 more)
Setup/: Setup.vdproj
bitmaps/: anim_backstep.xpm  anim_pause.xpm  anim_play.xpm  anim_play_bwd.xpm  anim_play_fwd.xpm  anim_reset.xpm  anim_step.xpm  anim_step_bwd.xpm  anim_step_fwd.xpm  bitmap_new.xpm  bitmap_open.xpm  bitmap_save.xpm  bitmap_select.xpm  csquery.xpm  file_norm.xpm  file_sel.xpm  folder_norm.xpm  folder_open.xpm  folder_sel.xpm  pause_export_icon.xpm  pause_icon.xpm  play_export_icon.xpm  recording_export_icon.xpm  recording_icon.xpm  snoopy.xpm
config/: FindDSSD_UTIL.cmake  FindDSSZ_UTIL.cmake  FindGECODE.cmake  FindGMP.cmake  FindIRRKLANG.cmake  FindLibSBML.cmake  FindOGDF.cmake  FindSPSA_SteeringAPI.cmake  FindSUNDIALS.cmake  FindSnoopy_Simulator.cmake  FindwxCode.cmake
distr/: snoopy2-lnx.sh
export/: SP_CTL_SMART.cpp  SP_CTL_SMART.h  SP_EPSDC.cpp  SP_EPSDC.h  SP_EXP_MIFDC.cpp  SP_EXP_MIFDC.h  SP_Export2HPN.cpp  SP_Export2HPN.h  SP_ExportANDL.cpp  SP_ExportANDL.h  SP_ExportAPNN.cpp  SP_ExportAPNN.h  SP_ExportCANDL.cpp  SP_ExportCANDL.h  SP_ExportCANDL_new.cpp  SP_ExportCANDL_new.h  SP_ExportCPN2FCPN.cpp  SP_ExportCPN2FCPN.h  SP_ExportCPN2Matlab.cpp  SP_ExportCPN2Matlab.h  SP_ExportCPP.cpp  SP_ExportCPP.h  SP_ExportCSV.cpp  SP_ExportCSV.h  SP_ExportCUDA.cpp  SP_ExportCUDA.h  SP_ExportColCPN2CSV.cpp  SP_ExportColCPN2CSV.h  SP_ExportColCPN2ColExtPT.cpp  SP_ExportColCPN2ColExtPT.h  SP_ExportColCPN2ColFCPN.cpp  SP_ExportColCPN2ColFCPN.h  SP_ExportColCPN2ColHPN.cpp  SP_ExportColCPN2ColHPN.h  SP_ExportColCPN2ColPT.cpp  SP_ExportColCPN2ColPT.h  SP_ExportColCPN2ColSPN.cpp  SP_ExportColCPN2ColSPN.h  SP_ExportColCPN2ContPed.cpp  SP_ExportColCPN2ContPed.h  (+255 more)
import/: SP_ImportANDL.cpp  SP_ImportANDL.h  SP_ImportAPNN.cpp  SP_ImportAPNN.h  SP_ImportCANDL.cpp  SP_ImportCANDL.h  SP_ImportCSV.cpp  SP_ImportCSV.h  SP_ImportCSV2ColPN.cpp  SP_ImportCSV2ColPN.h  SP_ImportCSV2SPN.cpp  SP_ImportCSV2SPN.h  SP_ImportFTree_DNF.cpp  SP_ImportFTree_DNF.h  SP_ImportManager.cpp  SP_ImportManager.h  SP_ImportPED.cpp  SP_ImportPED.h  SP_ImportPNML.cpp  SP_ImportPNML.h  SP_ImportPNML2ColPN.cpp  SP_ImportPNML2ColPN.h  SP_ImportRoutine.h  SP_ImportSBML.cpp  SP_ImportSBML.h  SP_ImportSBML2cntPn.cpp  SP_ImportSBML2cntPn.h  SP_ImportSBML2extPN.cpp  SP_ImportSBML2extPN.h  SP_ImportSBML2sPn.cpp  SP_ImportSBML2sPn.h  SP_ImportTINA.cpp  SP_ImportTINA.h
import/erode/: DocBuilder.cpp  DocBuilder.h  ErodeGrama.h  ErodeNet.h  ErodeParser.cpp  ErodeParser.h  ErodeTokens.h  IDocBuilder.h  SP_ImportERODE.cpp  SP_ImportERODE.h
sp_core/: MD5HasherDefs.h  SP_Core.cpp  SP_Core.h  SP_Deque.cpp  SP_Deque.h  SP_GPR_Animation.cpp  SP_GPR_Animation.h  SP_GPR_Base.cpp  SP_GPR_Base.h  SP_GPR_Canvas.cpp  SP_GPR_Canvas.h  SP_GPR_Elements.cpp  SP_GPR_Elements.h  SP_GPR_Fonts.cpp  SP_GPR_Fonts.h  SP_List.cpp  SP_List.h  SP_Map.cpp  SP_Map.h  SP_Matrix.cpp  SP_Matrix.h  SP_PriorityQueue.cpp  SP_PriorityQueue.h  SP_Reader.cpp  SP_Reader.h  SP_Set.cpp  SP_Set.h  SP_Signer.cpp  SP_Signer.h  SP_Vector.cpp  SP_Vector.h  SP_Writer.cpp  SP_Writer.h  SP_XmlReader.cpp  SP_XmlReader.h  SP_XmlWriter.cpp  SP_XmlWriter.h
sp_core/FTree/: SP_FTree_TermParser.cpp  SP_FTree_TermParser.h  SP_FTree_TermScanner.cpp  SP_FTree_TermScanner.h
sp_core/TParser/: SP_Parser.cpp  SP_Parser.h
sp_core/base/: SP_Animator.cpp  SP_Animator.h  SP_Data.cpp  SP_Data.h  SP_ElementClass.cpp  SP_ElementClass.h  SP_Error.h  SP_Graphic.cpp  SP_Graphic.h  SP_Name.h  SP_NetElement.cpp  SP_NetElement.h  SP_Type.h
sp_core/tools/: CyclicGraph.cpp  CyclicGraph.h  MersenneTwister.h  SP_ExpressionTree.cpp  SP_ExpressionTree.h  SP_FTreeNodeColourizer.cpp  SP_FTreeNodeColourizer.h  SP_NetUnfolder.cpp  SP_NetUnfolder.h  SP_NodeColourizer.cpp  SP_NodeColourizer.h  SP_SimpleNetBuilder.cpp  SP_SimpleNetBuilder.h  SP_StopWatch.cpp  SP_StopWatch.h  rfdag.cpp  rfdag.h  whitespace_parse.h
sp_core/vector/: SP_VectorParser.cpp  SP_VectorParser.h  SP_VectorReader.cpp  SP_VectorReader.h  SP_VectorScanner.cpp  SP_VectorScanner.h  SP_VectorWriter.cpp  SP_VectorWriter.h
sp_ds/: SP_DS_Animator.cpp  SP_DS_Animator.h  SP_DS_Attribute.cpp  SP_DS_Attribute.h  SP_DS_Edge.cpp  SP_DS_Edge.h  SP_DS_Edgeclass.cpp  SP_DS_Edgeclass.h  SP_DS_Graph.cpp  SP_DS_Graph.h  SP_DS_Metadata.cpp  SP_DS_Metadata.h  SP_DS_Metadataclass.cpp  SP_DS_Metadataclass.h  SP_DS_Netclass.cpp  SP_DS_Netclass.h  SP_DS_Node.cpp  SP_DS_Node.h  SP_DS_NodeVector.cpp  SP_DS_NodeVector.h  SP_DS_NodeVectorSystem.cpp  SP_DS_NodeVectorSystem.h  SP_DS_Nodeclass.cpp  SP_DS_Nodeclass.h  SP_DS_TreeNode.h  SP_DS_Visitor.cpp  SP_DS_Visitor.h
sp_ds/animators/: SP_DS_CoarseTransAnimator.cpp  SP_DS_CoarseTransAnimator.h  SP_DS_ExtPTPlaceAnimator.cpp  SP_DS_ExtPTPlaceAnimator.h  SP_DS_ExtPTTransAnimator.cpp  SP_DS_ExtPTTransAnimator.h  SP_DS_FTreeEventAnimator.cpp  SP_DS_FTreeEventAnimator.h  SP_DS_FTreeGateAnimator.cpp  SP_DS_FTreeGateAnimator.h  SP_DS_ModNetPlaceAnimator.cpp  SP_DS_ModNetPlaceAnimator.h  SP_DS_MusTransAnimator.cpp  SP_DS_MusTransAnimator.h  SP_DS_PlaceAnimator.cpp  SP_DS_PlaceAnimator.h  SP_DS_TransAnimator.cpp  SP_DS_TransAnimator.h
sp_ds/attributes/: SP_DS_BoolAttribute.cpp  SP_DS_BoolAttribute.h  SP_DS_ColListAttribute.cpp  SP_DS_ColListAttribute.h  SP_DS_DoubleAttribute.cpp  SP_DS_DoubleAttribute.h  SP_DS_DoubleListAttribute.cpp  SP_DS_DoubleListAttribute.h  (+40 more)
sp_gr/: SP_GR_Animator.cpp  SP_GR_Animator.h  SP_GR_Attribute.cpp  SP_GR_Attribute.h  SP_GR_Edge.cpp  SP_GR_Edge.h  SP_GR_Metadata.cpp  SP_GR_Metadata.h  SP_GR_Node.cpp  SP_GR_Node.h
(+813 files in other folders)
